change name to readableuuid

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "nanoid": "^2.1.9"
   },
-  "name": "readid",
+  "name": "readableuuid",
   "version": "0.1.0",
   "description": "Generate human-friendly, readable unique string ID by using nanoid",
   "main": "app.js",
