--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "dependencies": {
-    "nanoid": "^2.1.9"
+    "nanoid": "^3.1.16"
   },
   "name": "readableuuid",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Generate human-friendly, readable unique string ID by using nanoid",
-  "main": "app.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": "https://github.com/wangsijie/readid",
   "author": "wangsijie <i@sijie.wang>",
   "license": "MIT",
-  "keywords": ["uuid", "nanoid", "random-string"]
+  "scripts": {
+    "prepare": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "uuid",
+    "nanoid",
+    "random-string"
+  ]
 }
