--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "nanoid": "^3.1.16"
   },
   "name": "readableuuid",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Generate human-friendly, readable unique string ID by using nanoid",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -12,11 +12,17 @@
   "license": "MIT",
   "scripts": {
     "prepare": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "uuid",
     "nanoid",
     "random-string"
-  ]
+  ],
+  "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
+  }
 }
